fix: button visible size

--- a/apps/gauzy/src/app/pages/goal-settings/goal-settings.component.scss
+++ b/apps/gauzy/src/app/pages/goal-settings/goal-settings.component.scss
@@ -9,7 +9,7 @@
     background-color: rgba(50, 50, 50, 0.03);
   }
   nb-tab {
-    height: calc(100vh - 21rem);
+    height: calc(100vh - 22.5rem);
   }
 }
 .card-general {
